Project 11/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pulsar-system
  labels:
    app.kubernetes.io/part-of: pulsar
