Project 11/k8s/base/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulsar-worker-deployment
  namespace: pulsar-system
  labels:
    app: pulsar-worker-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pulsar-worker-demo
  template:
    metadata:
      labels:
        app: pulsar-worker-demo
    spec:
      containers:
        - name: pulsar-worker-demo
          image: reelforge/pulsar-worker-sdk-demo:latest
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
